# fmptools

./: .gitignore  .travis.yml  HACKING  LICENSE  Makefile.am  README.md  configure.ac  unshuffle.c
.github/workflows/: build.yml
fp3/: 000613-kth-unshuffled.fp3  BD-unshuffled.fp3  CAKUNITS.FP3  UM.fp3  VA.fp3  calendars-unshuffled.fp3  calendars.fp3  government-unshuffled.FP3  government.FP3  governmenttypes.FP3
src/: block.c  dump_file.c  fmp.c  fmp.h  fmp_internal.h  list_columns.c  list_tables.c  read_values.c  scsu.c
src/fuzz/: fuzz_fmp.c
test/data/fmp12/: Charts.fmp12  FMburgh_2012_11_07_Database.fmp12  PortableCode39-2.fmp12
test/data/fp3/: 000613-kth.fp3  BD.fp3  governmenttypes-unshuffled.FP3
test/data/fp5/: CAKUNITS-unshuffled.FP5  CAKUNITS.FP5  Catalogue.fp5
test/data/fp7/: Dynamic_Fields.fp7  OpenWaiverDayForm.fp7  data-unshuffled.fp7  data.fp7  interface.fp7
